# test

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
include/calc/: add.h  sum.h
test/: CMakeLists.txt
test/src/: add.cpp  sum.cpp
